02_traefik.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: che-gateway
  namespace: che
  labels:
    app: che-gateway
spec:
  containers:
  - name: traefik
    image: traefik:2.4.5
    volumeMounts:
    - name: config
      mountPath: /etc/traefik
  volumes:
  - name: config
    configMap:
      name: traefik-config
---
kind: Service
apiVersion: v1
metadata:
  name: che-gateway
  namespace: che
spec:
  selector:
    app: che-gateway
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: che
  namespace: che
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - che.192.168.39.252.nip.io
    secretName: che-tls
  rules:
  - host: che.192.168.39.252.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: che-gateway
            port: 
              number: 8080
